2003-01-22  Hartmut Penner  <hpenner@de.ibm.com>

	* config/s390/s390.md (floatdfdi2): Insn has type 'itof'.
	* config/s390/2064.md (define_bypass): Correct 'Load' and
	'Load-address' bypass values.
	
2003-01-22  Andreas Schwab  <schwab@suse.de>

	* config/ia64/t-ia64 (insn-attrtab.o-warn): Define as -Wno-error.

2003-01-21  Zack Weinberg  <zack@codesourcery.com>

	* genautomata.c (output_internal_insn_latency_func,
	output_print_reservation_func): Short circuit when there is no
	automaton to generate code for.

2003-01-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (ssa-ccp.o): Depend on coretypes.h $(TM_H).
	(df.o): Delete duplicate dependency on coretypes.h $(TM_H).

2003-01-21  Geoffrey Keating  <geoffk@apple.com>

	* config/rs6000/rs6000.md: Remove warning.
	(builtin_setjmp_receiver): Likewise.
	* config/darwin.c (update_stubs): Slightly improve terrible hack
	with identifiers.  Add comment pointing out problems with it.
	(update_non_lazy_ptrs): Likewise.

2003-01-21  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (lookup_filename): Fix printf format warning.
	* system.h (fread_unlocked, fwrite_unlocked): Undef.

	* fixinc/Makefile.in (FL_LIST): Add $($@-warn) hook.
	(fixincl.o-warn, gnu-regex.o-warn): New.
	* fixinc/fixfixes.c (FIX_PROC_HEAD): Mark parameters unused.
	* fixinc/fixtests.c (TEST_FOR_FIX_PROC_HEAD): Likewise.
	* fixinc/fixincl.c (process): Fix printf format warning.

2003-01-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* dwarf2out (output_file_names): Don't crash if called
	with empty file_table.

2003-01-21  Zack Weinberg  <zack@codesourcery.com>

	* genautomata.c (output_internal_insn_latency_func): Add
	missing break statement to generated code.

2003-01-21  Roger Sayle  <roger@eyesopen.com>

	* stmt.c (same_case_target_p): New function to determine whether
	two case labels branch to the same target.  Split out from...
	(group_case_nodes): ... here.  Use same_case_target_p instead.